update helm value of nginx-ingress

--- a/綜合應用測驗/題目二/manifest/helm/asiayo/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/values.yaml
@@ -9,9 +9,12 @@ ingress-nginx:
         tcp:
           3306: 30306
           3307: 30307
+    ingressClass: asiayo
     ingressClassResource:
-      name: asiayo
       enabled: true
+      name: asiayo
+      controllerValue: k8s.io/asiayo
+
   tcp: 
     3306: "asiayo/asiayo-mysql-primary-headless:3306"
     3307: "asiayo/asiayo-mysql-secondary:3306"
