--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/asiayo-app/templates/ingress.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/asiayo-app/templates/ingress.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: asiayo
 spec:
   ingressClassName: asiayo
+  tls:
+  - hosts:
+    - asiayo.angusitlab.com
+    secretName: angusitlab-tls
   rules:
   - host: asiayo.angusitlab.com
     http:
