update for two deploy way demo

--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/asiayo-app/templates/persistentvolumeclaim.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/asiayo-app/templates/persistentvolumeclaim.yaml
@@ -10,3 +10,6 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: asiayo-services
+  selector:
+    matchLabels:
+      pv-name: asiayo-pv-1
