--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/configmap.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-conf
-  namespace: asiayo
+  namespace: demo
 data:
   nginx.conf: |
     user nginx;
