--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/poddisruptionbudget.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/poddisruptionbudget.yaml
@@ -1,10 +1,10 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: asiayo-app-pdb
-  namespace: asiayo
+  name: demo-app-pdb
+  namespace: demo
 spec:
   minAvailable: 1
   selector:
     matchLabels:
-      app: asiayo-app
+      app: demo-app
