--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/deployment.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: asiayo-app
-  namespace: asiayo
+  name: demo-app
+  namespace: demo
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: asiayo-app
+      app: demo-app
   template:
     metadata:
       labels:
-        app: asiayo-app
+        app: demo-app
     spec:
       priorityClassName: high-priority 
       containers:
-      - name: asiayo-app
+      - name: demo-app
         image: nginx:latest
         ports:
         - containerPort: 80
         volumeMounts:
         - mountPath: "/data"
-          name: asiayo-storage
+          name: demo-storage
         - name: nginx-conf
           mountPath: /etc/nginx/nginx.conf
           subPath: nginx.conf
@@ -38,9 +38,9 @@ spec:
             cpu: "250m"
             memory: "256Mi"
       volumes:
-      - name: asiayo-storage
+      - name: demo-storage
         persistentVolumeClaim:
-          claimName: asiayo-pvc
+          claimName: demo-pvc
       - name: nginx-conf
         configMap:
           name: nginx-conf
