--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/hpa.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/hpa.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: asiayo-app-hpa
-  namespace: asiayo
+  name: demo-app-hpa
+  namespace: demo
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: asiayo-app
+    name: demo-app
   minReplicas: 1
   maxReplicas: 10
   metrics:
