--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/persistentvolume.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/persistentvolume.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: asiayo-pv
-  namespace: asiayo
+  name: demo-pv
+  namespace: demo
 spec:
   capacity:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: asiayo-services
+  storageClassName: demo-services
   hostPath:
     path: "/mnt/data"
