--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/persistentvolumeclaim.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/persistentvolumeclaim.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: asiayo-pvc
-  namespace: asiayo
+  name: demo-pvc
+  namespace: demo
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: asiayo-services
+  storageClassName: demo-services
