--- a/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/service.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/charts/app/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: asiayo-service
-  namespace: asiayo
+  name: demo-service
+  namespace: demo
 spec:
   selector:
-    app: asiayo-app
+    app: demo-app
   ports:
     - protocol: TCP
       port: 80
