--- a/綜合應用測驗/題目二/manifest/helm/asiayo/templates/pv.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/asiayo/templates/pv.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: data-asiayo-mysql-primary-0
+  name: data-demo-mysql-primary-0
   labels:
-    app: data-asiayo-mysql-primary-0
+    app: data-demo-mysql-primary-0
 spec:
   capacity:
     storage: 8Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: asiayo-mysql
+  storageClassName: demo-mysql
   persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: /mnt/mysql-data
@@ -17,15 +17,15 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: data-asiayo-mysql-volume-0
+  name: data-demo-mysql-volume-0
   labels:
-    app: data-asiayo-mysql-secondary
+    app: data-demo-mysql-secondary
 spec:
   capacity:
     storage: 8Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: asiayo-mysql
+  storageClassName: demo-mysql
   persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: /mnt/mysql-data
@@ -33,15 +33,15 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: data-asiayo-mysql-volume-1
+  name: data-demo-mysql-volume-1
   labels:
-    app: data-asiayo-mysql-secondary
+    app: data-demo-mysql-secondary
 spec:
   capacity:
     storage: 8Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: asiayo-mysql
+  storageClassName: demo-mysql
   persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: /mnt/mysql-data
