--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/values.yaml
@@ -822,7 +822,7 @@ postgresql:
     persistence:
       ##
       ## Enable PostgreSQL persistence using Persistent Volume Claims.
-      enabled: true
+      enabled: false
       ##
       ## Persistent class
       # storageClass: classname
