--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/values.yaml
@@ -822,10 +822,10 @@ postgresql:
     persistence:
       ##
       ## Enable PostgreSQL persistence using Persistent Volume Claims.
-      enabled: false
+      enabled: true
       ##
       ## Persistent class
-      # storageClass: classname
+      storageClass: demo-services
       ##
       ## Access modes:
       accessModes:
