--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/templates/pv.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/templates/pv.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   capacity:
     storage: 8Gi
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
