--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/templates/pv.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-declarative/superset/templates/pv.yaml
@@ -13,4 +13,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: demo-services
   hostPath:
-    path: "/mnt/data"
+    path: "/bitnami/postgresql/data"
