--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
@@ -1,5 +1,7 @@
 superset:
   postgresql:
     enabled: true
+    volumePermissions:
+      enabled: true
     primary:
       storageClass: demo-services
