--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/charts/superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/charts/superset/values.yaml
@@ -830,7 +830,7 @@ postgresql:
       enabled: true
       ##
       ## Persistent class
-      # storageClass: classname
+      storageClass: classname
       ##
       ## Access modes:
       accessModes:
