--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
@@ -4,4 +4,5 @@ superset:
     volumePermissions:
       enabled: true
     primary:
-      storageClass: demo-services
+      persistence:
+        storageClass: demo-services
