--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
@@ -6,3 +6,6 @@ superset:
     primary:
       persistence:
         storageClass: demo-services
+  configOverrides:
+    superset_config.py: |
+      SECRET_KEY = "ds8932ufjojAJFL@#LJF:LAJ"
