--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
@@ -9,3 +9,5 @@ superset:
   configOverrides:
     superset_config.py: |
       SECRET_KEY = "ds8932ufjojAJFL@#LJF:LAJ"
+    requirements.txt: |
+      psycopg2-binary
