--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
@@ -10,4 +10,4 @@ superset:
     superset_config.py: |
       SECRET_KEY = "ds8932ufjojAJFL@#LJF:LAJ"
     requirements.txt: |
-      psycopg2-binary
+      psycopg2-binary==2.9.9
