--- a/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
+++ b/綜合應用測驗/題目二/manifest/helm/argo-cd/demo-superset/values.yaml
@@ -9,5 +9,23 @@ superset:
   configOverrides:
     superset_config.py: |
       SECRET_KEY = "ds8932ufjojAJFL@#LJF:LAJ"
-    requirements.txt: |
-      psycopg2-binary==2.8.6
+  bootstrapScript: |
+    #!/bin/bash
+    
+    # Install system-level dependencies
+    apt-get update && apt-get install -y \
+      python3-dev \
+      default-libmysqlclient-dev \
+      build-essential \
+      pkg-config
+
+    # Install required Python packages
+    pip install \
+      authlib \
+      psycopg2-binary \
+      mysqlclient \
+
+    # Create bootstrap file if it doesn't exist
+    if [ ! -f ~/bootstrap ]; then
+      echo "Running Superset with uid {{ .Values.runAsUser }}" > ~/bootstrap
+    fi
